fix: shifts contribute header back to the right

--- a/src/header/header.module.css
+++ b/src/header/header.module.css
@@ -52,6 +52,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  justify-content: right;
 }
 .logo {
   width: 10.25rem;
